--- a/index.html
+++ b/index.html
@@ -10,8 +10,141 @@
 </head>
 <body>
     
+    <!-- section start -->
+   <section class="fruit-section">
+    <div class="fruit-container">
+        <div class="fruit-wrapper">
+            <img class="fruit-img" 
+                 src="/images/mae-mu-vbAEHCrvXZ0-unsplash.png" 
+                 width="720" 
+                 height="600"
+                 alt="rasm">
 
+                 <div class="fruit-text">
+                    <h2 class="fruit-heading">  
+                        Graphic Design
+                    </h2>
+                    <p class="fruit-paragraph">
+                        Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+                    </p>
+                 </div>
+        </div>
 
+        <div class="fruit-wrapper-2">
+            <img class="fruit-img-2" 
+                 src="./images/mae-mu-U1iYwZ8Dx7k-unsplash.png" 
+                 width="720" 
+                 height="600"
+                 alt="rasm">
+
+                <div class="fruit-text-2">
+                    <h2 class="fruit-heading-2">
+                        Photography
+                    </h2>
+                    <p class="fruit-paragraph-2">
+                        Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+                    </p>
+                </div>
+        </div>
+
+    </div>
+    </section>
+    <!-- section start -->
+       
+    <!-- clients section start -->
+    <section class="clients-section">
+        <div class="clients-container">
+         <h3 class="clients-heading">
+             CLIENT TESTIMONIALS
+         </h3>
+ 
+         <ul class="clients-list">
+             <li class="clients-item">
+                 <img class="clients-img"
+                      width="72"
+                      height="72"
+                      src="./images/Oval.png" 
+                      alt="rasm">
+                 <p class="clients-paragraph">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+                 <p class="clients-heading-2">Emily R.</p>
+                 <a href="" class="clients-link">Marketing Director</a>
+             </li>
+             <li class="clients-item-center">
+                 <img class="clients-img"
+                      width="72"
+                      height="72"
+                      src="./images/Oval Copy.png" 
+                      alt="rasm">
+                 <p class="clients-paragraph">Sunnysides enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+                 <p class="clients-heading-2">Thomas S.</p>
+                 <a href="" class="clients-link">Chief Operating Officer</a>
+             </li>
+             <li class="clients-item">
+                 <img class="clients-img"
+                      width="72"
+                      height="72"
+                      src="./images/Oval Copy 2.png" 
+                      alt="rasm">
+                 <p class="clients-paragraph">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+                 <p class="clients-heading-2">Jennie F.</p>
+                 <a href="" class="clients-link">Business Owner</a>
+             </li>
+         </ul>
+ 
+ 
+        </div>
+    </section>
+    <!-- clients section end -->
+
+    <!-- footer start -->
+    <footer>
+        <div class="container">
+            <div class="wrapper">
+                <img class="img1" 
+                 src="./images/Bitmap.png"
+                 width="360"
+                 height="400" 
+                 alt="rasm" >
+            <img class="img1" 
+                 src="./images/Bitmap (1).png"
+                 width="360"
+                 height="400" 
+                 alt="rasm" >
+            <img class="img1" 
+                 src="./images/Bitmap (2).png"
+                 width="360"
+                 height="400" 
+                 alt="rasm" >
+            <img class="img1" 
+                 src="./images/Bitmap (3).png"
+                 width="360"
+                 height="400" 
+                 alt="rasm" >
+            </div>
+            <div class="wrapper-2">
+                <img class="img2"
+                     width="170"
+                     height="33"
+                     src="./images/sunnyside.svg" 
+                     alt="rasm">
+
+                <ul class="ul1">
+                    <li class="li1"><a href="" class="a1">About</a></li>
+                    <li class="li1"><a href="" class="a1">Services</a></li>
+                    <li class="li1"><a href="" class="a1">Projects</a></li>
+                </ul>     
+
+                <ul class="ul2">
+                    <li class="li2"><img src="./images/Path.png" alt="" class="img3"></li>
+                    <li class="li2"><img src="./images/Shape.png" alt="" class="img3"></li>
+                    <li class="li2"><img src="./images/Path (1).png" alt="" class="img3"></li>
+                    <li class="li2"><img src="./images/Path (2).png" alt="" class="img3"></li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
+    <!-- footer end -->
 
     <script src="./js/main.js"></script>
 </body>
