--- a/index.html
+++ b/index.html
@@ -9,6 +9,83 @@
     <title>sunnyside</title>
 </head>
 <body>
+
+<!-- header code start  -->
+<header class="header_nav">
+    <div class="container">
+        <div class="icon"><img src="images/sunnyside.svg" alt="logo">
+        </div>
+        
+        <ul class="header_nav_link ">
+            <li class="header_nav_item"><a href="#">About</a></li>
+            <li class="header_nav_item"><a href="#">Services</a></li>
+            <li class="header_nav_item"><a href="#">Projects</a></li>
+            <button class="btn_item" type="button"><li class="header_nav_item"><a href="#">Contact</a></li></button>
+        </ul>
+    </div>
+    <nav class="navbar">
+        <div class="container-fluid">
+          <!-- <a class="navbar-brand" href="#">Logo</a> -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="header_nav_link ">
+                <li class="header_nav_item"><a href="#">About</a></li>
+                <li class="header_nav_item"><a href="#">Services</a></li>
+                <li class="header_nav_item"><a href="#">Projects</a></li>
+                <button class="btn_item" type="button"><li class="header_nav_item"><a href="#">Contact</a></li></button>
+            </ul>
+          </div>
+        </nav>
+    <div class="strelka">
+        <h1 class="sarlafha">We are creatives</h1>
+        <img src="images/strelka.png" alt="strelka">
+    </div>
+</header>
+ <!-- header code end  -->
+<section class="main">
+    <div class="quti">
+        <h1>Transform your brand</h1>
+        <p>We are a full-service creative agency specializing in <br> helping brands grow fast. Engage your clients through <br> compelling visuals that do most of the marketing for you.</p>
+        <button class="btn_leranmore" type="button">leranmore</button>
+    </div>
+    <div class="quti-1">
+        <img src="images/tuhum.png" alt="tuhum" width="700" height="300">
+    </div>
+</section>
+
+<section class="main-1">
+    <div class="quti-1">
+        <img src="images/kruwka.png" alt="tuhum" width="650" height="300">
+    </div>
+
+    <div class="quti">
+        <h1>Stand out to the right <br> audience</h1>
+        Using a collaborative formula of designers, researchers, <br> photographers, videographers, and copywriters, we’ll <br> build and extend your brand in digital places. <br> <br>
+        <button class="btn_leranmore" type="button">leranmore</button>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
     <!-- section start -->
    <section class="fruit-section">
@@ -145,6 +222,9 @@
         </div>
     </footer>
     <!-- footer end -->
+
+
+
 
     <script src="./js/main.js"></script>
 </body>
