--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>sunnyside</title>
@@ -224,7 +225,7 @@
     <!-- footer end -->
 
 
-
+    <script src="./js/bootstrap.bundle.min.js"></script>
 
     <script src="./js/main.js"></script>
 </body>
